feat: 初始化云函数目录

--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,6 @@
 {
   "miniprogramRoot": "dist/",
+  "cloudfunctionRoot": "cloud/",
   "projectname": "miniprogram",
   "description": "Crop Group Miniprogram",
   "appid": "wxa04637c865f18984",
