--- a/package.json
+++ b/package.json
@@ -26,7 +26,17 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "lint": "eslint --fix --ext .js,.ts,.jsx,.tsx .",
+    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
+    "precommit": "lint-staged",
+    "postinstall": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "browserslist": [
     "last 3 versions",
@@ -72,6 +82,8 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "react-refresh": "0.11.0",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
