--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "eslint --fix --ext .js,.ts,.jsx,.tsx ./src",
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
     "precommit": "lint-staged",
-    "postinstall": "husky install"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
@@ -81,7 +81,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-refresh": "0.11.0",
