--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/core": "^7.8.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@dcasia/mini-program-tailwind-webpack-plugin": "^1.5.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
     "@tarojs/cli": "3.5.1",
     "@tarojs/webpack5-runner": "3.5.1",
