--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tarojs/shared": "3.5.1",
     "@tarojs/taro": "3.5.1",
     "@tarojs/taro-h5": "3.5.1",
+    "classnames": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
