--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@tarojs/taro": "3.5.1",
     "@tarojs/taro-h5": "3.5.1",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
