--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
     "enhance": false,
     "compileHotReLoad": false,
     "postcss": false,
-    "minified": true,
+    "minified": false,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
