--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-    "dev": " NODE_ENV=production npx taro build --type weapp --watch",
+    "dev": "cross-env NODE_ENV=production npx taro build --type weapp --watch",
     "lint": "eslint --fix --ext .js,.ts,.jsx,.tsx ./src",
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\" \"cloud/**/*.{js,ts,jsx,tsx}\"",
     "precommit": "lint-staged",
@@ -83,6 +83,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "babel-preset-taro": "3.5.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.5.2",
     "eslint-plugin-import": "^2.12.0",
