--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@tarojs/taro-h5": "3.5.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.4",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
