--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "node_modules/@types"
     ]
   },
-  "include": ["./src", "./types", "src/utils/cloudFunctions/.config.ts"],
+  "include": ["./src", "./types"],
   "compileOnSave": false
 }
