--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.11.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "solarlunar": "^2.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
