--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.11.4",
     "mobx": "^6.6.1",
+    "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
